crates/analyzer/tests/snapshots/errors__ctx_undefined_contract_init.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `Bar` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/ctx_undefined_contract_init.fe:5:9
  │
5 │         Bar(address(0))
  │         ^^^ ---------- supplied 1 argument
  │         │    
  │         expects 2 arguments

error: `Context` is not defined
  ┌─ compile_errors/ctx_undefined_contract_init.fe:5:12
  │
4 │     pub fn baz() {
  │            ---
  │            │
  │            Note: declare `ctx` in this function signature
  │            Example: `pub fn foo(ctx: Context, ...)`
5 │         Bar(address(0))
  │            ^^^^^^^^^^^^ `ctx` must be defined and passed into the contract constructor
  │
  = Note: import context with `use std::context::Context`
  = Example: MyContract(ctx, contract_address)


